@@ -10,7 +10,6 @@
 /* uncomment definition to enable option
  * comment definition to disable option */
 
-#define _NO_PERSPECTIVE_CHANGE /* NOTE: disabling this option hasn't been tested out properly*/
 //#define _INSTALL
 //#define _DEBUG
 
